// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cheapauth is input password is correct 1`] = `
<div
  class="cheapauth--root"
  data-testid="cheapauth--root"
>
  <div
    class="cheapauth--document"
  >
    <section
      aria-labelledby="cheapauth"
      class="cheapauth--section"
    >
      <header
        class="cheapauth--header"
      >
        <h3
          class="cheapauth--title"
          data-testid="cheapauth--title"
        >
          タイトル
        </h3>
      </header>
       
      <div>
        <form
          class="cheapauth--form"
          data-testid="cheapauth--form"
        >
          <div
            class="cheapauth--row"
          >
            <input
              class="cheapauth--input"
              data-testid="cheapauth--input"
              type="password"
            />
             
            <!---->
          </div>
           
          <div
            class="cheapauth--row"
          >
            <button
              class="cheapauth--submit"
              data-testid="cheapauth--submit"
            >
              ログインする
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
   
  <!---->
</div>
`;

exports[`Cheapauth is input password is correct 2`] = `
<div
  class="cheapauth--root"
  data-approval="true"
  data-testid="cheapauth--root"
>
  <div
    class="cheapauth--document"
  >
    <section
      aria-labelledby="cheapauth"
      class="cheapauth--section"
    >
      <header
        class="cheapauth--header"
      >
        <h3
          class="cheapauth--title"
          data-testid="cheapauth--title"
        >
          タイトル
        </h3>
      </header>
       
      <div>
        <form
          class="cheapauth--form"
          data-testid="cheapauth--form"
        >
          <div
            class="cheapauth--row"
          >
            <input
              class="cheapauth--input"
              data-testid="cheapauth--input"
              type="password"
            />
             
            <!---->
          </div>
           
          <div
            class="cheapauth--row"
          >
            <button
              class="cheapauth--submit"
              data-testid="cheapauth--submit"
            >
              ログインする
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
   
</div>
`;

exports[`Cheapauth is input password is incorrect 1`] = `
<div
  class="cheapauth--root"
  data-testid="cheapauth--root"
>
  <div
    class="cheapauth--document"
  >
    <section
      aria-labelledby="cheapauth"
      class="cheapauth--section"
    >
      <header
        class="cheapauth--header"
      >
        <h3
          class="cheapauth--title"
          data-testid="cheapauth--title"
        >
          タイトル
        </h3>
      </header>
       
      <div>
        <form
          class="cheapauth--form"
          data-testid="cheapauth--form"
        >
          <div
            class="cheapauth--row"
          >
            <input
              class="cheapauth--input"
              data-testid="cheapauth--input"
              type="password"
            />
             
            <!---->
          </div>
           
          <div
            class="cheapauth--row"
          >
            <button
              class="cheapauth--submit"
              data-testid="cheapauth--submit"
            >
              ログインする
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
   
  <!---->
</div>
`;

exports[`Cheapauth is input password is incorrect 2`] = `
<div
  class="cheapauth--root"
  data-testid="cheapauth--root"
>
  <div
    class="cheapauth--document"
  >
    <section
      aria-labelledby="cheapauth"
      class="cheapauth--section"
    >
      <header
        class="cheapauth--header"
      >
        <h3
          class="cheapauth--title"
          data-testid="cheapauth--title"
        >
          タイトル
        </h3>
      </header>
       
      <div>
        <form
          class="cheapauth--form"
          data-testid="cheapauth--form"
        >
          <div
            class="cheapauth--row"
          >
            <input
              class="cheapauth--input"
              data-testid="cheapauth--input"
              type="password"
            />
             
            <div
              aria-live="assertive"
              class="cheapauth--error-message"
              data-testid="cheapauth--error-message"
            >
              <small>
                パスワードが違います
              </small>
            </div>
          </div>
           
          <div
            class="cheapauth--row"
          >
            <button
              class="cheapauth--submit"
              data-testid="cheapauth--submit"
            >
              ログインする
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
   
  <!---->
</div>
`;
